# RustyChasers

./: .gitignore  Cargo.toml  README.md
_data_archive/: benchmark.txt
_data_archive/_sauce/: notes.txt
_data_archive/code_archive/animal_code/: animal.rs  animal_individual.rs
_data_archive/instances/50k_pure_hervor/: config.json  hervor_config.json
_data_archive/instances/campers/: campers.txt
_data_archive/instances/closest_safe_evolve/: chaser_config.json  config.json  cse.txt  training_stats.txt
_data_archive/instances/pos_vis_safe_evolve/: chaser_config.json  pvs.txt  training_stats.txt
_data_archive/instances/positional_vision/: config.json  hervor_config.json  pos_vis.txt  training_stats.txt
_data_archive/instances/solid/: chaser_config.json  config.json  hervor_config.json  solid.txt
_data_archive/instances/straight_liners/: sl.txt
app/: Cargo.toml
app/src/: main.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/graphics/: Cargo.toml
libs/graphics/src/: lib.rs
libs/individual/: Cargo.toml
libs/individual/src/: lib.rs
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation/src/: chaser.rs  config.rs  hervor.rs  lib.rs  plant.rs  world.rs
libs/simulation/src/brain/: brain.rs  chaser_brain.rs  hervor_brain.rs  mod.rs
libs/simulation/src/eye/: cellular_eye.rs  closest_eye.rs  eye.rs  mod.rs  positional_eye.rs
libs/simulation/src/individual/: chaser_individual.rs  hervor_individual.rs  mod.rs
libs/statistics/: Cargo.toml
py_gen_plotter/: main.py
(+4 files in other folders)
